# report_generator

./: CHANGELOG  LICENSE  Makefile  README.rst  pyproject.toml  requirements.txt
src/report_generator/: __main__.py  app.py
src/report_generator/dtos/: products_dtos.py
src/report_generator/models/: analysis_models.py  links.py  model_protocols.py  product_model.py
src/report_generator/services/: product_service.py  utils.py
tests/: conftest.py
tests/fixtures/: products_fixtures.py  repositories_fixtures.py
tests/unit/services/: test_product_service.py  test_utils.py
