[project]
name = "report_generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.11.7",
    "pyside6>=6.9.1",
    "sqlmodel>=0.0.24",
]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "ruff>=0.12.0",
]

[tool.ruff]
line-length = 79
extend-exclude = ['src/migrations']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.ruff.lint]
preview = true
select = ['I', 'UP', 'F', 'E', 'W', 'PL', 'PT']

# This project was generated with 0.3.22 using template: https://github.com/beeware/briefcase-template@v0.3.22
[tool.briefcase]
project_name = "Report Generator"
bundle = "com.edmilsonrodrigues"
version = "0.0.1"
url = "https://github.com/EdmilsonRodrigues/report_generator"
license.file = "LICENSE"
author = "Edmilson Rodrigues"
author_email = "edmilson.monteiro.rodrigues@gmail.com"

[tool.briefcase.app.report_generator]
formal_name = "Report Generator"
description = "This is an application used to generate quality assurance reports for enteral feeding products"
long_description = """More details about the app should go here.
"""
sources = [
    "src/report_generator",
]
test_sources = [
    "tests",
]

requires = [
    "PySide6-Essentials~=6.7",
    # "PySide6-Addons~=6.7",
]
test_requires = [
    "pytest",
]

[tool.briefcase.app.report_generator.macOS]
universal_build = true
requires = [
    "std-nslog~=1.0.3",
]

[tool.briefcase.app.report_generator.linux]
requires = [
]

[tool.briefcase.app.report_generator.linux.system.debian]
system_requires = [
]

system_runtime_requires = [
    # Derived from https://doc.qt.io/qt-6/linux-requirements.html
    "libxext6",
    "libxrender1",
    "libx11-xcb1",
    "libxkbcommon-x11-0",
    "libxcb-image0",
    "libxcb-cursor0",
    "libxcb-shape0",
    "libxcb-randr0",
    "libxcb-xfixes0",
    "libxcb-sync1",
    "libxcb-icccm4",
    "libxcb-keysyms1",
    "libfontconfig1",
    "libsm6",
    "libice6",
    "libglib2.0-0",
    "libgl1",
    "libegl1",
    "libdbus-1-3",
]

[tool.briefcase.app.report_generator.linux.system.rhel]
system_requires = [
]

system_runtime_requires = [
    "qt6-qtbase-gui",
]

[tool.briefcase.app.report_generator.linux.system.suse]
system_requires = [
]

system_runtime_requires = [
    "libgthread-2_0-0",
    "libQt6Gui6",
]

[tool.briefcase.app.report_generator.linux.system.arch]
system_requires = [
]

system_runtime_requires = [
    "qt6-base",
]

[tool.briefcase.app.report_generator.linux.appimage]
manylinux = "manylinux_2_28"

system_requires = [
# ?? FIXME
]

linuxdeploy_plugins = [
]

[tool.briefcase.app.report_generator.linux.flatpak]
flatpak_runtime = "org.kde.Platform"
flatpak_runtime_version = "6.7"
flatpak_sdk = "org.kde.Sdk"

[tool.briefcase.app.report_generator.windows]
requires = [
]

# Mobile deployments
[tool.briefcase.app.report_generator.iOS]
supported = false

[tool.briefcase.app.report_generator.android]
supported = false

# Web deployments
[tool.briefcase.app.report_generator.web]
supported = false
